--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "sapui5"
   ],
   "main": "webapp/index.html",
-  "dependencies": {},
   "devDependencies": {
-    "@ui5/cli": "^2.14.1",
-    "@sap/ux-ui5-tooling": "1"
+    "@sap/ux-ui5-tooling": "^1.7.1",
+    "@ui5/cli": "^2.14.1"
   },
   "scripts": {
     "start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#assemblercommxonchangetraffic-display\"",
